--- a/templates/Concourse/0/rancher-compose.yml
+++ b/templates/Concourse/0/rancher-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 catalog:
   name: Concourse
-  version: 3.12.0
+  version: 3.12.0-a
   description: Concourse is an open-source continuous thing-doer.
   questions:
     - variable: db_user
