--- a/templates/Concourse/0/docker-compose.yml
+++ b/templates/Concourse/0/docker-compose.yml
@@ -32,6 +32,9 @@ services:
     - HTTP_PROXY=http://proxys.nikkeibp.co.jp:80
     - HTTPS_PROXY=http://proxys.nikkeibp.co.jp:80
     - NO_PROXY=127.0.0.1,localhost,.bpaws.local,169.254.169.254,s3.ap-northeast-1.amazonaws.com,s3-ap-northeast-1.amazonaws.com,s3.dualstack.ap-northeast-1.amazonaws.com
+    - http_proxy=http://proxys.nikkeibp.co.jp:80
+    - https_proxy=http://proxys.nikkeibp.co.jp:80
+    - no_proxy=127.0.0.1,localhost,.bpaws.local,169.254.169.254,s3.ap-northeast-1.amazonaws.com,s3-ap-northeast-1.amazonaws.com,s3.dualstack.ap-northeast-1.amazonaws.com
 
   concourse-web:
     labels:
@@ -58,6 +61,9 @@ services:
     - HTTP_PROXY=http://proxys.nikkeibp.co.jp:80
     - HTTPS_PROXY=http://proxys.nikkeibp.co.jp:80
     - NO_PROXY=127.0.0.1,localhost,.bpaws.local,169.254.169.254,s3.ap-northeast-1.amazonaws.com,s3-ap-northeast-1.amazonaws.com,s3.dualstack.ap-northeast-1.amazonaws.com
+    - http_proxy=http://proxys.nikkeibp.co.jp:80
+    - https_proxy=http://proxys.nikkeibp.co.jp:80
+    - no_proxy=127.0.0.1,localhost,.bpaws.local,169.254.169.254,s3.ap-northeast-1.amazonaws.com,s3-ap-northeast-1.amazonaws.com,s3.dualstack.ap-northeast-1.amazonaws.com
 
   concourse-worker:
     labels:
@@ -77,3 +83,6 @@ services:
     - HTTP_PROXY=http://proxys.nikkeibp.co.jp:80
     - HTTPS_PROXY=http://proxys.nikkeibp.co.jp:80
     - NO_PROXY=127.0.0.1,localhost,.bpaws.local,169.254.169.254,s3.ap-northeast-1.amazonaws.com,s3-ap-northeast-1.amazonaws.com,s3.dualstack.ap-northeast-1.amazonaws.com
+    - http_proxy=http://proxys.nikkeibp.co.jp:80
+    - https_proxy=http://proxys.nikkeibp.co.jp:80
+    - no_proxy=127.0.0.1,localhost,.bpaws.local,169.254.169.254,s3.ap-northeast-1.amazonaws.com,s3-ap-northeast-1.amazonaws.com,s3.dualstack.ap-northeast-1.amazonaws.com
